--- a/NueaxProj/src/styles.css
+++ b/NueaxProj/src/styles.css
@@ -1,2 +1,19 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~bootstrap/dist/css/bootstrap.css";
+
+html
+{
+    overflow-x: hidden;
+}
+
+body, html {
+    height: 100vh;
+    width:100vw;
+    background-image: url('assets/BackgroundImage2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: top center;
+    margin: 0;
+    padding: 0;
+}
