--- a/NueaxProj/src/theme.scss
+++ b/NueaxProj/src/theme.scss
@@ -19,7 +19,7 @@ $Form-theme: mat-light-theme($Form-primary,$Form-accent,$Form-Warn);
     @include angular-material-theme($Form-theme);
 }
 
-$SucessError-primary: mat-palette($mat-gray,800);
+$SucessError-primary: mat-palette($mat-blue,800);
 $SucessError-accent: mat-palette($mat-green,500);
 
 $SucessError-theme: mat-light-theme($SucessError-primary,$SucessError-accent);
@@ -37,4 +37,15 @@ $SucessError-theme: mat-light-theme($SucessError-primary,$SucessError-accent);
 .sucess-snackbar
 {
     color:#81d4fa;
+}
+
+
+.mat-tab-body .mat-tab-body-content
+{  
+    overflow: hidden;
+}
+
+.mat-tab-header
+{
+    width:40vw;
 }
