--- a/NueaxProj/src/app/first-page/first-page.component.html
+++ b/NueaxProj/src/app/first-page/first-page.component.html
@@ -106,7 +106,7 @@
                           
                           <div class="col-4 FormTheme">
                             <mat-chip-list>
-                                <button mat-raised-button color="accent" selected type="submit" [disabled]="!PersonalDetailsForm.valid">SignUp</button>
+                                <button mat-raised-button color="accent" selected type="submit" [disabled]="!PersonalDetailsForm.valid">Upload Data</button>
                             </mat-chip-list>
                           </div> 
 
