--- a/NueaxProj/src/theme.scss
+++ b/NueaxProj/src/theme.scss
@@ -49,3 +49,10 @@ $SucessError-theme: mat-light-theme($SucessError-primary,$SucessError-accent);
 {
     width:40vw;
 }
+
+
+
+.FormTheme .mat-raised-button.mat-accent[disabled]
+{
+    background-color:#757575;
+}
